--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+/* 
+ul li{
+    margin: 12px;
+    background-color:seashell;
+}
+
+pre{
+    background: black;
+    color: wheat;
+} */
