--- a/src/app/componentes/trabajos/trabajos.component.html
+++ b/src/app/componentes/trabajos/trabajos.component.html
@@ -1,33 +1,54 @@
-<button mat-raised-button color="warn" (click)="crearTrabajo($event)">Nuevo</button>
-<br>
-<mat-list>
-  <mat-list-item *ngFor="let trabajo of trabajos">
-    <button mat-mini-fab color="primary" (click)="verDetalle(trabajo.Id)">+</button> {{trabajo.Nombre}}
-  </mat-list-item>
-</mat-list>
-<br>
-
-<table mat-table [dataSource]=trabajos>
-</table>
-<br>
-
-<div *ngIf="trabajos">
-  <ul>
-    <li *ngFor="let trabajo of trabajos">
-      <b>[{{trabajo.Id}}]
-        {{trabajo.Nombre}}</b><br>
-      - IdUsuario: {{trabajo.IdUsuario}}<br>
-      - Tipo: {{trabajo.Tipo.Nombre}}<br>
-      - Estado: {{trabajo.Estado.Nombre}}<br>
-      - Contratista: {{trabajo.Contratista.Nombre}} {{trabajo.Contratista.Apellido}}<br>
-      - Descripción: {{trabajo.Descripcion}}<br>
-      - Precio: {{trabajo.Precio}}
-      <ul>
-        <li *ngFor="let tarea of trabajo.Tareas">
-          [{{tarea.Id}}] {{tarea.Nombre}}
-        </li>
-      </ul>
-      <button mat-raised-button color="primary" (click)="verDetalle(trabajo.Id)">Detalle</button>
-    </li>
-  </ul>
+<div>
+  <button mat-raised-button color="warn" (click)="crearTrabajo($event)">
+    Nuevo trabajo
+  </button>
 </div>
+<br>
+<table mat-table [dataSource]="trabajos" class="mat-elevation-z8">
+
+  <ng-container matColumnDef="detalle">
+    <th mat-header-cell *matHeaderCellDef> </th>
+    <td mat-cell *matCellDef="let trabajo" class="tabla-fila-detalle">
+      <button class="boton-detalle" mat-flat-button color="primary" (click)="verDetalle(trabajo.Id)">
+        Ver detalle
+      </button>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="eliminar">
+    <th mat-header-cell *matHeaderCellDef> </th>
+    <td mat-cell *matCellDef="let trabajo" class="tabla-fila-detalle">
+      <button class="boton-detalle" mat-flat-button disabled (click)="eliminarTrabajo(trabajo)">
+        Eliminar
+      </button>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="nombre">
+    <th mat-header-cell *matHeaderCellDef> Nombre </th>
+    <td mat-cell *matCellDef="let trabajo"> <b>{{trabajo.Nombre}}</b> </td>
+  </ng-container>
+
+  <ng-container matColumnDef="estado">
+    <th mat-header-cell *matHeaderCellDef> Estado </th>
+    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Estado.Nombre}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="contratista">
+    <th mat-header-cell *matHeaderCellDef> Contratista </th>
+    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Contratista.Nombre}} {{trabajo.Contratista.Apellido}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="tipo">
+    <th mat-header-cell *matHeaderCellDef> Tipo de contrato </th>
+    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Tipo.Nombre}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="precio">
+    <th mat-header-cell *matHeaderCellDef class="tabla-fila-precio"> Precio </th>
+    <td mat-cell *matCellDef="let trabajo" class="tabla-fila-precio"> {{trabajo.Precio | currency}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columnasDeTabla"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnasDeTabla;"></tr>
+</table>
