--- a/src/app/componentes/trabajos/trabajos.component.html
+++ b/src/app/componentes/trabajos/trabajos.component.html
@@ -39,9 +39,9 @@
     <td mat-cell *matCellDef="let trabajo"> {{trabajo.Contratista.Nombre}} {{trabajo.Contratista.Apellido}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="tipo">
-    <th mat-header-cell *matHeaderCellDef> Tipo de contrato </th>
-    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Tipo.Nombre}} </td>
+  <ng-container matColumnDef="contrato">
+    <th mat-header-cell *matHeaderCellDef> Contrato </th>
+    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Contrato.Nombre}} </td>
   </ng-container>
 
   <ng-container matColumnDef="precio">
