Se agregó edición de trabajo

--- a/src/app/componentes/contratista-editar/contratista-editar.component.html
+++ b/src/app/componentes/contratista-editar/contratista-editar.component.html
@@ -17,6 +17,8 @@
 <label>Observaciones:
   <input name="observaciones" placeholder="..." [(ngModel)]="contratista.Observaciones" />
 </label>
-<br>
-<button (click)="aceptar($event)">Aceptar</button>
-<button (click)="cancelar($event)">Cancelar</button>
+
+<div class="botones-confirmar">
+  <button (click)="aceptar($event)">Aceptar</button>
+  <button (click)="cancelar($event)">Cancelar</button>
+</div>
