--- a/src/app/componentes/app/app.component.html
+++ b/src/app/componentes/app/app.component.html
@@ -1,3 +1,6 @@
 <app-menu></app-menu>
-<br>
-<router-outlet></router-outlet>
+<div class="container">
+    <br>
+    <router-outlet></router-outlet>
+    <br>
+</div>
