--- a/src/app/componentes/trabajo-editar/trabajo-editar.component.css
+++ b/src/app/componentes/trabajo-editar/trabajo-editar.component.css
@@ -1,4 +1,4 @@
-.formulario {
+/* .formulario {
     min-width: 150px;
     max-width: 500px;
     width: 100%;
@@ -10,4 +10,4 @@
 
 .boton{
     margin: 5px 15px 5px 0px;
-}
+} */
