--- a/src/app/componentes/trabajo-editar/trabajo-editar.component.html
+++ b/src/app/componentes/trabajo-editar/trabajo-editar.component.html
@@ -1,4 +1,5 @@
-<div class="formulario">
+<h3>Trabajo</h3>
+<div *ngIf="trabajo" class="formulario">
   <div>
     <mat-form-field class="formulario-item">
       <input matInput placeholder="Nombre" [(ngModel)]="trabajo.Nombre">
@@ -7,16 +8,7 @@
 
   <div>
     <mat-form-field class="formulario-item">
-      <textarea matInput placeholder="Descripción" rows="6" [(ngModel)]="trabajo.Descripcion"></textarea>
-    </mat-form-field>
-  </div>
-  <br>
-  <br>
-  <div>
-    <mat-form-field class="formulario-item">
-      <mat-select placeholder="Contrato" [(ngModel)]="trabajo.Contrato.Id">
-        <mat-option *ngFor="let item of contratos" [value]="item.Id">{{item.Nombre}}</mat-option>
-      </mat-select>
+      <textarea matInput placeholder="Descripción" rows="1" [(ngModel)]="trabajo.Descripcion"></textarea>
     </mat-form-field>
   </div>
 
@@ -28,6 +20,8 @@
     </mat-form-field>
   </div>
 
+  <br>
+
   <div>
     <mat-form-field class="formulario-item">
       <mat-select placeholder="Contratista" [(ngModel)]="trabajo.Contratista.Id">
@@ -35,8 +29,22 @@
       </mat-select>
     </mat-form-field>
   </div>
-  <br>
+
   <div>
+    <mat-form-field class="formulario-item">
+      <mat-select placeholder="Contrato" [(ngModel)]="trabajo.Contrato.Id">
+        <mat-option *ngFor="let item of contratos" [value]="item.Id">{{item.Nombre}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field class="formulario-item">
+      <input matInput placeholder="Precio" [(ngModel)]="trabajo.Precio">
+    </mat-form-field>
+  </div>
+
+  <div class="botones-confirmar">
     <button mat-raised-button color="primary" class="boton" (click)="aceptar($event)">Aceptar</button>
     <button mat-raised-button color="primary" class="boton" (click)="cancelar($event)">Cancelar</button>
   </div>
