--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,83 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
-/* 
-ul li{
-    margin: 12px;
-    background-color:seashell;
-}
 
 pre{
-    background: black;
-    color: wheat;
-} */
+    padding: 20px;
+    border-color: red;
+    border-style: solid;
+    border-width: 5px;
+    background: darkblue;
+    color: whitesmoke;
+    box-shadow: 0px 0px 30px -2px rgba(0,0,0,0.75);
+} 
+
+button.tabla-boton {
+    margin-right: 10px;
+}
+
+table.ancho-completo {
+    width: 100%;
+}
+
+.tabla-columna-boton {
+    width: 0.1%;
+}
+
+.tabla-columna-precio {
+    width: 0.1%;
+    text-align: right;
+}
+
+@keyframes filaSeleccionada-in {
+    to {
+        background-color: cornsilk;
+    }
+}
+
+@keyframes filaSeleccionada-out {
+    from {
+        background-color: cornsilk;
+    }
+}
+
+.mat-row {
+    animation-name: filaSeleccionada-out;
+    animation-duration: 200ms;
+    animation-direction: normal;
+    animation-timing-function: ease-out;
+    animation-fill-mode: both;
+}
+
+.mat-row:hover {
+    animation-name: filaSeleccionada-in;
+    animation-duration: 200ms;
+    animation-direction: normal;
+    animation-timing-function: ease-out;
+    animation-fill-mode: both;
+}
+
+.formulario {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+}
+
+.formulario-item {
+    width: 100%;
+}
+
+button.boton{
+    margin: 5px 15px 5px 0px;
+}
+
+.detalle-ficha {
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid gainsboro;
+    box-shadow: 0px 0px 43px -15px rgba(0, 0, 0, 0.75);
+}
+
+.botones-confirmar{
+    margin: 15px 0px;
+}
