Se agregó funcionalidad para eliminar trabajos, pagos, tareas, contratistas

--- a/src/app/componentes/trabajo-detalle/trabajo-detalle.component.html
+++ b/src/app/componentes/trabajo-detalle/trabajo-detalle.component.html
@@ -4,12 +4,15 @@
         <button class="tabla-boton" mat-raised-button color="primary" (click)="editarTrabajo()">
             Editar trabajo
         </button>
-        <span class="h3">{{trabajo.Nombre}}</span>
+        <button class="tabla-boton" mat-stroked-button color="warn" (click)="eliminarTrabajo()">
+            Eliminar trabajo
+        </button>
     </div>
     <hr>
+    <div class="h3">{{trabajo.Nombre}}</div>
     <div class="detalle-ficha">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <div class="item-margen">
                     <b>Estado</b><br>
                     <span class="badge" [class.badge-dark]="trabajo.Estado.Id===1" [class.badge-primary]="trabajo.Estado.Id===2"
@@ -23,19 +26,30 @@
                     {{trabajo.Descripcion}}
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <div class="item-margen">
                     <b>Contrato</b><br>
                     {{trabajo.Contrato.Nombre}}
                 </div>
                 <div class="item-margen">
+                    <b>Contratista</b><br>
+                    {{trabajo.Contratista.Nombre}} {{trabajo.Contratista.Apellido}}
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="item-margen">
                     <b>
-                        Precio por
+                        Precio pactado por
                         <span *ngIf="trabajo.Contrato.Id==1">trabajo</span>
                         <span *ngIf="trabajo.Contrato.Id==2">día</span>
                     </b>
                     <br>
                     {{trabajo.Precio | currency }}
+                </div>
+                <div class="item-margen">
+                    <b>Pagado hasta la fecha</b><br>
+                    {{obtenerMontoDePagosRatificados() | currency}}
+                    <span class="texto-pequeno">(Dif: {{trabajo.Precio - obtenerMontoDePagosRatificados() | currency}})</span>
                 </div>
             </div>
         </div>
@@ -43,7 +57,7 @@
     <hr>
 
     <!-- CONTRATISTA -->
-    <mat-accordion>
+    <!--   <mat-accordion>
         <mat-expansion-panel>
             <mat-expansion-panel-header>
                 <mat-panel-title>
@@ -64,7 +78,10 @@
                 <br>
                 <b>Observaciones:</b> {{trabajo.Contratista.Observaciones}}
             </div>
-            <!-- <div class="row">
+
+
+
+            <div class="row">
                 <div class="col-md-3">
                     <mat-list>
                         <mat-list-item>
@@ -107,10 +124,12 @@
                         </mat-list-item>
                     </mat-list>
                 </div>
-            </div> -->
+            </div>
+
+
         </mat-expansion-panel>
     </mat-accordion>
-    <br>
+    <br> -->
     <!-- TAREAS -->
     <mat-accordion>
         <mat-expansion-panel expanded>
@@ -128,7 +147,7 @@
                     Nueva tarea
                 </button>
             </div>
-            <table mat-table [dataSource]="trabajo.Tareas" class="ancho-completo">
+            <table mat-table [dataSource]="trabajo.Tareas" class="ancho-completo" *ngIf="trabajo.Tareas.length>0">
 
                 <ng-container matColumnDef="editar">
                     <th mat-header-cell *matHeaderCellDef> </th>
@@ -182,7 +201,7 @@
                     Nuevo pago
                 </button>
             </div>
-            <table mat-table [dataSource]="pagos" class="ancho-completo">
+            <table mat-table [dataSource]="pagos" class="ancho-completo" *ngIf="pagos.length>0">
 
                 <ng-container matColumnDef="editar">
                     <th mat-header-cell *matHeaderCellDef> </th>
@@ -193,26 +212,34 @@
                     </td>
                 </ng-container>
 
-                <ng-container matColumnDef="anular">
+                <!-- <ng-container matColumnDef="anular">
                     <th mat-header-cell *matHeaderCellDef> </th>
                     <td mat-cell *matCellDef="let pago" class="tabla-columna-boton">
-                        <button class="tabla-boton" mat-stroked-button disabled (click)="anularPago(pago.Id)">
-                            Anular
+                        <button class="tabla-boton" mat-stroked-button color="warn" (click)="anularPago(pago)">
+                            {{pago.EstaAnulado ? 'Ratificar': 'Anular'}}
                         </button>
                     </td>
-                </ng-container>
+                </ng-container> -->
 
                 <ng-container matColumnDef="fecha">
                     <th mat-header-cell *matHeaderCellDef> Fecha </th>
                     <td mat-cell *matCellDef="let pago">
                         {{ pago.Fecha | date:'fullDate' }}
-                        <div style="font-size: 9px">({{ pago.Fecha | date:'shortDate' }})</div>
+                        <div class="texto-pequeno">({{ pago.Fecha | date:'shortDate' }})</div>
                     </td>
                 </ng-container>
 
                 <ng-container matColumnDef="observaciones">
                     <th mat-header-cell *matHeaderCellDef> Observaciones </th>
                     <td mat-cell *matCellDef="let pago"> {{pago.Observaciones}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="anulado">
+                    <th mat-header-cell *matHeaderCellDef> Estado </th>
+                    <td mat-cell *matCellDef="let pago">
+                        <span *ngIf="pago.EstaAnulado" class="badge badge-danger">Anulado</span>
+                        <span *ngIf="!pago.EstaAnulado" class="badge badge-success">Ratificado</span>
+                    </td>
                 </ng-container>
 
                 <ng-container matColumnDef="monto">
@@ -225,7 +252,15 @@
             </table>
 
             <div id="monto-total">
-                <span style="font-size:9px">TOTAL:</span> {{obtenerMontoTotal() | currency}}
+                <div>
+                    <span class="texto-pequeno">Ratificados:</span> {{obtenerMontoDePagosRatificados() | currency}}
+                </div>
+                <div>
+                    <span class="texto-pequeno">Anulados:</span> {{obtenerMontoDePagosAnulados() | currency}}
+                </div>
+                <div>
+                    <span class="texto-pequeno">TOTAL:</span> {{obtenerMontoDePagosTotal() | currency}}
+                </div>
             </div>
 
         </mat-expansion-panel>
