--- a/src/app/componentes/pago-editar/pago-editar.component.html
+++ b/src/app/componentes/pago-editar/pago-editar.component.html
@@ -20,6 +20,10 @@
     </mat-form-field>
   </div>
 
+  <div>
+    <mat-checkbox [(ngModel)]="pago.EstaAnulado">Anulado</mat-checkbox>
+  </div>
+
   <div class="botones-confirmar">
     <button mat-raised-button color="primary" class="boton" (click)="aceptar($event)">Aceptar</button>
     <button mat-raised-button color="primary" class="boton" (click)="cancelar($event)">Cancelar</button>
