--- a/src/app/componentes/trabajo-detalle/trabajo-detalle.component.css
+++ b/src/app/componentes/trabajo-detalle/trabajo-detalle.component.css
@@ -3,11 +3,21 @@
 }
 
 #monto-total {
-    margin: 17px;
+    margin: 10px;
     padding: 10px;
     border: 1px solid black;
     background-color: rgb(200, 255, 200);
     text-align: right;
     font-weight: bold;
     float: right;
+    
+}
+
+.texto-pequeno{
+    color: grey;
+    font-size: 12px;
+}
+
+.tabla-fila-anulada{
+    background-color: red;
 }
