--- a/src/app/componentes/trabajos/trabajos.component.html
+++ b/src/app/componentes/trabajos/trabajos.component.html
@@ -15,14 +15,14 @@
     </td>
   </ng-container>
 
-  <ng-container matColumnDef="eliminar">
+  <!-- <ng-container matColumnDef="eliminar">
     <th mat-header-cell *matHeaderCellDef> </th>
     <td mat-cell *matCellDef="let trabajo" class="tabla-columna-boton">
       <button class="tabla-boton" mat-flat-button disabled (click)="eliminarTrabajo(trabajo)">
         Eliminar
       </button>
     </td>
-  </ng-container>
+  </ng-container> -->
 
   <ng-container matColumnDef="nombre">
     <th mat-header-cell *matHeaderCellDef> Nombre </th>
