Detalle de contratista

--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,7 +1,8 @@
 
 <nav class="menu">
   <a class="left" style="color:green" routerLink="/">OBRAPP</a>  
-  <a class="left" routerLink="/trabajos">Trabajos</a>
+  <a class="left" routerLink="/trabajos">Mis trabajos</a>
+  <a class="left" routerLink="/pagos">Mis pagos</a>
   <a class="left" routerLink="/contratistas">Contratistas</a>
   <a class="right" routerLink="/sesion">
     <mat-icon>home</mat-icon>
