--- a/src/app/componentes/trabajos/trabajos.component.html
+++ b/src/app/componentes/trabajos/trabajos.component.html
@@ -3,8 +3,9 @@
     Nuevo trabajo
   </button>
 </div>
-<br>
-<table mat-table [dataSource]="trabajos" class="mat-elevation-z8" class="ancho-completo">
+<hr>
+<div class="h3">Mis trabajos</div>
+<table mat-table [dataSource]="trabajos" class="mat-elevation-z8 ancho-completo">
 
   <ng-container matColumnDef="detalle">
     <th mat-header-cell *matHeaderCellDef> </th>
