--- a/src/app/componentes/contratistas/contratistas.component.html
+++ b/src/app/componentes/contratistas/contratistas.component.html
@@ -3,29 +3,30 @@
     Nuevo contratista
   </button>
 </div>
-<br>
-<table mat-table [dataSource]="contratistas" class="mat-elevation-z8">
+<hr>
+<div class="h3">Contratistas</div>
+<table mat-table [dataSource]="contratistas" class="mat-elevation-z8 ancho-completo">
 
   <ng-container matColumnDef="detalle">
     <th mat-header-cell *matHeaderCellDef> </th>
     <td mat-cell *matCellDef="let contratista" class="tabla-fila-detalle">
-      <button class="boton-detalle" mat-flat-button color="primary" (click)="verDetalle(contratista.Id)">
+      <button class="boton-detalle" mat-stroked-button color="primary" (click)="verDetalle(contratista.Id)">
         Ver detalle
       </button>
     </td>
   </ng-container>
 
-  <ng-container matColumnDef="eliminar">
+  <!-- <ng-container matColumnDef="eliminar">
     <th mat-header-cell *matHeaderCellDef> </th>
     <td mat-cell *matCellDef="let contratista" class="tabla-fila-detalle">
       <button class="boton-detalle" mat-flat-button disabled (click)="eliminarContratista(contratista)">
         Eliminar
       </button>
     </td>
-  </ng-container>
+  </ng-container> -->
 
   <ng-container matColumnDef="nombreApellido">
-    <th mat-header-cell *matHeaderCellDef> Nombre y Apellido </th>
+    <th mat-header-cell *matHeaderCellDef> Nombre apellido </th>
     <td mat-cell *matCellDef="let contratista"> <b>{{contratista.Nombre}} {{contratista.Apellido}}</b> </td>
   </ng-container>
 
