--- a/src/app/componentes/trabajos/trabajos.component.html
+++ b/src/app/componentes/trabajos/trabajos.component.html
@@ -41,6 +41,11 @@
     </td>
   </ng-container>
 
+  <!-- <ng-container matColumnDef="tareas">
+    <th mat-header-cell *matHeaderCellDef> Tareas </th>
+    <td mat-cell *matCellDef="let trabajo"> {{trabajo.Tareas.length}} </td>
+  </ng-container> -->
+
   <ng-container matColumnDef="contratista">
     <th mat-header-cell *matHeaderCellDef> Contratista </th>
     <td mat-cell *matCellDef="let trabajo"> {{trabajo.Contratista.Nombre}} {{trabajo.Contratista.Apellido}} </td>
@@ -52,7 +57,7 @@
   </ng-container>
 
   <ng-container matColumnDef="precio">
-    <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Precio </th>
+    <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Precio acordado </th>
     <td mat-cell *matCellDef="let trabajo" class="tabla-columna-precio"> {{trabajo.Precio | currency}} </td>
   </ng-container>
 
